AntlrCSharp/antlr/XCSSParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\dev\xcss-parser-csharp\AntlrCSharp\antlr\XCSSParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class XCSSParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OpenBracket=1, CloseBracket=2, OpenParen=3, CloseParen=4, OpenBrace=5, 
		CloseBrace=6, SemiColon=7, Equal=8, Colon=9, Dot=10, Multiply=11, Divide=12, 
		Pipe=13, Underscore=14, Quote=15, DoubleQuote=16, Comment=17, Url=18, 
		Space=19, Cdo=20, Cdc=21, Includes=22, DashMatch=23, Hash=24, Import=25, 
		Page=26, Media=27, Namespace=28, Charset=29, Important=30, Percentage=31, 
		Url_=32, UnicodeRange=33, MediaOnly=34, Not=35, And=36, Dimension=37, 
		UnknownDimension=38, Plus=39, Minus=40, Greater=41, Comma=42, Tilde=43, 
		PseudoNot=44, Integer=45, Number=46, String_=47, PrefixMatch=48, SuffixMatch=49, 
		SubstringMatch=50, FontFace=51, Supports=52, Or=53, Keyframes=54, From=55, 
		To=56, Calc=57, Viewport=58, CounterStyle=59, FontFeatureValues=60, DxImageTransform=61, 
		AtKeyword=62, Variable=63, Var=64, Ident=65, Function_=66, UnexpectedCharacter=67, 
		Name=68;
	public const int
		RULE_parse = 0, RULE_selectorGroup = 1, RULE_selector = 2, RULE_combinator = 3, 
		RULE_simpleSelectorSequence = 4, RULE_elementId = 5, RULE_elementIdValue = 6, 
		RULE_tagName = 7, RULE_typeSelector = 8, RULE_typeNamespacePrefix = 9, 
		RULE_elementName = 10, RULE_universal = 11, RULE_className = 12, RULE_classNameValue = 13, 
		RULE_condition = 14, RULE_xpathCondition = 15, RULE_elementIndex = 16, 
		RULE_subelementSelector = 17, RULE_text = 18, RULE_textValue = 19, RULE_textMatchStyle = 20, 
		RULE_attrib = 21, RULE_attribName = 22, RULE_attribMatchStyle = 23, RULE_attribValue = 24, 
		RULE_pseudo = 25, RULE_functionalPseudo = 26, RULE_expression = 27, RULE_negation = 28, 
		RULE_negationArg = 29, RULE_ident = 30, RULE_ws = 31;
	public static readonly string[] ruleNames = {
		"parse", "selectorGroup", "selector", "combinator", "simpleSelectorSequence", 
		"elementId", "elementIdValue", "tagName", "typeSelector", "typeNamespacePrefix", 
		"elementName", "universal", "className", "classNameValue", "condition", 
		"xpathCondition", "elementIndex", "subelementSelector", "text", "textValue", 
		"textMatchStyle", "attrib", "attribName", "attribMatchStyle", "attribValue", 
		"pseudo", "functionalPseudo", "expression", "negation", "negationArg", 
		"ident", "ws"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "'='", "':'", "'.'", 
		"'*'", "'/'", "'|'", "'_'", "'''", "'\"'", null, null, null, "'<!--'", 
		"'-->'", "'~='", "'|='", "'#'", null, null, null, null, "'@charset '", 
		null, null, "'url('", null, null, null, null, null, null, "'+'", "'-'", 
		"'>'", "','", "'~'", null, null, null, null, "'^='", "'$='", "'*='", null, 
		null, null, null, null, null, "'calc('", null, null, null, null, null, 
		null, "'var('"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Equal", "Colon", "Dot", "Multiply", "Divide", 
		"Pipe", "Underscore", "Quote", "DoubleQuote", "Comment", "Url", "Space", 
		"Cdo", "Cdc", "Includes", "DashMatch", "Hash", "Import", "Page", "Media", 
		"Namespace", "Charset", "Important", "Percentage", "Url_", "UnicodeRange", 
		"MediaOnly", "Not", "And", "Dimension", "UnknownDimension", "Plus", "Minus", 
		"Greater", "Comma", "Tilde", "PseudoNot", "Integer", "Number", "String_", 
		"PrefixMatch", "SuffixMatch", "SubstringMatch", "FontFace", "Supports", 
		"Or", "Keyframes", "From", "To", "Calc", "Viewport", "CounterStyle", "FontFeatureValues", 
		"DxImageTransform", "AtKeyword", "Variable", "Var", "Ident", "Function_", 
		"UnexpectedCharacter", "Name"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "XCSSParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static XCSSParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public XCSSParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public XCSSParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectorGroupContext selectorGroup() {
			return GetRuleContext<SelectorGroupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(XCSSParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			selectorGroup();
			State = 65;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorGroupContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectorContext[] selector() {
			return GetRuleContexts<SelectorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectorContext selector(int i) {
			return GetRuleContext<SelectorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(XCSSParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(XCSSParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WsContext[] ws() {
			return GetRuleContexts<WsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WsContext ws(int i) {
			return GetRuleContext<WsContext>(i);
		}
		public SelectorGroupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectorGroup; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterSelectorGroup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitSelectorGroup(this);
		}
	}

	[RuleVersion(0)]
	public SelectorGroupContext selectorGroup() {
		SelectorGroupContext _localctx = new SelectorGroupContext(Context, State);
		EnterRule(_localctx, 2, RULE_selectorGroup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			selector();
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 68;
				Match(Comma);
				State = 69;
				ws();
				State = 70;
				selector();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimpleSelectorSequenceContext[] simpleSelectorSequence() {
			return GetRuleContexts<SimpleSelectorSequenceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleSelectorSequenceContext simpleSelectorSequence(int i) {
			return GetRuleContext<SimpleSelectorSequenceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WsContext[] ws() {
			return GetRuleContexts<WsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WsContext ws(int i) {
			return GetRuleContext<WsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombinatorContext[] combinator() {
			return GetRuleContexts<CombinatorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombinatorContext combinator(int i) {
			return GetRuleContext<CombinatorContext>(i);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitSelector(this);
		}
	}

	[RuleVersion(0)]
	public SelectorContext selector() {
		SelectorContext _localctx = new SelectorContext(Context, State);
		EnterRule(_localctx, 4, RULE_selector);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Space) | (1L << Plus) | (1L << Greater) | (1L << Tilde))) != 0)) {
				{
				State = 77;
				combinator();
				}
			}

			State = 80;
			simpleSelectorSequence();
			State = 81;
			ws();
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Space) | (1L << Plus) | (1L << Greater) | (1L << Tilde))) != 0)) {
				{
				{
				State = 82;
				combinator();
				State = 83;
				simpleSelectorSequence();
				State = 84;
				ws();
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CombinatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Plus() { return GetToken(XCSSParser.Plus, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WsContext ws() {
			return GetRuleContext<WsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Greater() { return GetToken(XCSSParser.Greater, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Tilde() { return GetToken(XCSSParser.Tilde, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space() { return GetToken(XCSSParser.Space, 0); }
		public CombinatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_combinator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterCombinator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitCombinator(this);
		}
	}

	[RuleVersion(0)]
	public CombinatorContext combinator() {
		CombinatorContext _localctx = new CombinatorContext(Context, State);
		EnterRule(_localctx, 6, RULE_combinator);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Plus:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91;
				Match(Plus);
				State = 92;
				ws();
				}
				break;
			case Greater:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				Match(Greater);
				State = 94;
				ws();
				}
				break;
			case Tilde:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95;
				Match(Tilde);
				State = 96;
				ws();
				}
				break;
			case Space:
				EnterOuterAlt(_localctx, 4);
				{
				State = 97;
				Match(Space);
				State = 98;
				ws();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleSelectorSequenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TagNameContext tagName() {
			return GetRuleContext<TagNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementIdContext[] elementId() {
			return GetRuleContexts<ElementIdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementIdContext elementId(int i) {
			return GetRuleContext<ElementIdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassNameContext[] className() {
			return GetRuleContexts<ClassNameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassNameContext className(int i) {
			return GetRuleContext<ClassNameContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext[] condition() {
			return GetRuleContexts<ConditionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition(int i) {
			return GetRuleContext<ConditionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PseudoContext[] pseudo() {
			return GetRuleContexts<PseudoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PseudoContext pseudo(int i) {
			return GetRuleContext<PseudoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NegationContext[] negation() {
			return GetRuleContexts<NegationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NegationContext negation(int i) {
			return GetRuleContext<NegationContext>(i);
		}
		public SimpleSelectorSequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleSelectorSequence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterSimpleSelectorSequence(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitSimpleSelectorSequence(this);
		}
	}

	[RuleVersion(0)]
	public SimpleSelectorSequenceContext simpleSelectorSequence() {
		SimpleSelectorSequenceContext _localctx = new SimpleSelectorSequenceContext(Context, State);
		EnterRule(_localctx, 8, RULE_simpleSelectorSequence);
		int _la;
		try {
			State = 121;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Multiply:
			case Pipe:
			case MediaOnly:
			case Not:
			case And:
			case Or:
			case From:
			case To:
			case Ident:
				EnterOuterAlt(_localctx, 1);
				{
				State = 101;
				tagName();
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBracket) | (1L << Colon) | (1L << Dot) | (1L << Hash) | (1L << PseudoNot))) != 0)) {
					{
					State = 107;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case Hash:
						{
						State = 102;
						elementId();
						}
						break;
					case Dot:
						{
						State = 103;
						className();
						}
						break;
					case OpenBracket:
						{
						State = 104;
						condition();
						}
						break;
					case Colon:
						{
						State = 105;
						pseudo();
						}
						break;
					case PseudoNot:
						{
						State = 106;
						negation();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 111;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case OpenBracket:
			case Colon:
			case Dot:
			case Hash:
			case PseudoNot:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					State = 117;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case Hash:
						{
						State = 112;
						elementId();
						}
						break;
					case Dot:
						{
						State = 113;
						className();
						}
						break;
					case OpenBracket:
						{
						State = 114;
						condition();
						}
						break;
					case Colon:
						{
						State = 115;
						pseudo();
						}
						break;
					case PseudoNot:
						{
						State = 116;
						negation();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 119;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBracket) | (1L << Colon) | (1L << Dot) | (1L << Hash) | (1L << PseudoNot))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Hash() { return GetToken(XCSSParser.Hash, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ElementIdValueContext elementIdValue() {
			return GetRuleContext<ElementIdValueContext>(0);
		}
		public ElementIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterElementId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitElementId(this);
		}
	}

	[RuleVersion(0)]
	public ElementIdContext elementId() {
		ElementIdContext _localctx = new ElementIdContext(Context, State);
		EnterRule(_localctx, 10, RULE_elementId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(Hash);
			State = 124;
			elementIdValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementIdValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Name() { return GetToken(XCSSParser.Name, 0); }
		public ElementIdValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementIdValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.EnterElementIdValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IXCSSParserListener typedListener = listener as IXCSSParserListener;
			if (typedListener != null) typedListener.ExitElementIdValue(this);
		}
	}

	[RuleVersion(0)]
	public ElementIdValueContext elementIdValue() {
		ElementIdValueContext _localctx = new ElementIdValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_elementIdValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(Name);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
